# dj-ccr-news

./: README.md  docker-compose.yml  pyproject.toml
src/ccr_news/: manage.py
src/ccr_news/ccr_news/: asgi.py  settings.py  urls.py  wsgi.py
src/ccr_news/news/: admin.py  models.py  serializers.py  views.py
src/ccr_news/news/migrations/: 0001_initial.py  0002_alter_news_new_type.py
tests/: test_dj_ccr_news.py
